[package]
name = "rust_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14.1"

[target.'cfg(unix)'.dependencies]
core-graphics = "0.23.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
	"Win32_UI_Input",
	"Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
